<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.StatementOfCustomerActivity"
    android:padding="16dp">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/titleTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/customer_statement"
          android:textSize="18sp"
          android:textStyle="bold" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_1_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_1_en"
          android:textStyle="italic" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_2_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_2_en"
          android:textStyle="italic" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_3_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_3_en"
          android:textStyle="italic" />

      <!-- Statement 4 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_4_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_4_en"
          android:textStyle="italic" />

      <!-- Statement 5 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_5_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_5_en"
          android:textStyle="italic" />

      <!-- Statement 6 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_6_id" />


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_6_en"
          android:textStyle="italic" />

      <!-- Statement 7 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_7_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_7_en"
          android:textStyle="italic" />

      <!-- Statement 8 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_8_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_8_en"
          android:textStyle="italic" />

      <!-- Statement 9 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_9_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_9_en"
          android:textStyle="italic" />

      <!-- Statement 10 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_10_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_10_en"
          android:textStyle="italic" />

      <!-- Statement 11 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_11_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_11_en"
          android:textStyle="italic" />

      <!-- Statement 12 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_12_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_12_en"
          android:textStyle="italic" />

      <!-- Statement 13 -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="8dp"
          android:text="@string/statement_13_id" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:text="@string/statement_13_en"
          android:textStyle="italic" />

      <!-- Signature Section -->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intersemibold"
            android:text="@string/ttd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.328" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/red_border">

          <com.github.gcacace.signaturepad.views.SignaturePad
              android:id="@+id/signature_pad"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:penColor="@android:color/black" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickClear"
            android:text="@string/clear" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit_btn" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>
